--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,15 @@
 [versions]
-agp = "8.4.2"
+agp = "8.10.1"
 circuit = "0.22.2"
 coil = "2.5.0"
 compileSdk = "34"
 compose = "1.7.0-beta03"
-composeCompiler = "2.0.0"
 coroutines = "1.8.1"
 dagger = "2.51.1"
 desugarJdkLibs = "2.0.4"
 detekt = "1.23.1"
-kotlin = "2.0.0"
-kspPlugin = "2.0.0-1.0.22"
+kotlin = "2.1.0"
+kspPlugin = "2.1.0-1.0.29"
 material3 = "1.2.1"
 minSdk = "28"
 moshi = "1.15.0"
@@ -75,6 +74,7 @@ retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", 
 robolectric = { module = "org.robolectric:robolectric", version = "4.10.3" }
 sortDependenciesGradlePlugin = { module = "com.squareup:sort-dependencies-gradle-plugin", version = "0.6" }
 spotify-auth = { module = "com.spotify.android:auth", version = "2.1.1" }
+spotlight = { module = "com.fueledbycaffeine.spotlight:spotlight-gradle-plugin", version = "1.0" }
 timber = "com.jakewharton.timber:timber:5.0.1"
 truth = "com.google.truth:truth:1.4.2"
 
