Update AGP 9.0, Kotlin 2.3.10, Gradle 9.3.1, JVM 21
- AGP: 8.10.1 → 9.0.1

- Kotlin: 2.1.0 → 2.3.10

- Gradle: 8.14.2 → 9.3.1

- KSP: 2.1.0-1.0.29 → 2.3.5 (KSP2)

- Hilt: 2.55 → 2.59

- JVM target: 17 → 21

Breaking changes fixed:

- CommonExtension type parameter changes

- kotlinOptions → compilerOptions DSL

- Removed deprecated kotlin-android plugin

- Extension helper functions for AGP 9.0

- proguard-android-optimize.txt

- Removed targetSdk from library modules

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.10.1"
+agp = "9.0.1"
 circuit = "0.22.2"
 coil = "2.5.0"
 compileSdk = "34"
 compose = "1.7.0-beta03"
 coroutines = "1.8.1"
-dagger = "2.55"
+dagger = "2.59"
 desugarJdkLibs = "2.0.4"
 detekt = "1.23.1"
-kotlin = "2.1.0"
-kspPlugin = "2.1.0-1.0.29"
+kotlin = "2.3.10"
+kspPlugin = "2.3.5"
 material3 = "1.2.1"
 minSdk = "28"
 moshi = "1.15.0"
