--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation projects.feature.login.internal
     implementation projects.library.bottomNavigation.public
     implementation projects.library.circuit.public
+    implementation projects.library.metro.public
     implementation projects.library.theme.public
     // DO NOT ADD ANY MORE DEPENDENCIES!!!
 
