Simplify build-logic: migrate to Groovy DSL and remove enterprise config
Strip Tinder-specific CI/Sonatype/Develocity enterprise configuration from build-logic scripts, replacing with simple local-only defaults. Migrate settings from Kotlin DSL to Groovy, standardize double quotes across all build.gradle files, and share repository config via apply(from:).

🤖 Generated with [Firebender](https://firebender.com)

Co-Authored-By: Firebender <help@firebender.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,5 @@
 pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-    }
-
+    apply(from: "build-logic/repositories.gradle")
     includeBuild("build-logic")
 }
 
